--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,7 +4,7 @@ html
     head
         title #{_T('home')}
         
-        link(res='stylesheet' src="/3rd/bootstrap/dist/css/bootstrap.min.css")
+        link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
         
         block style
         
