--- a/src/views/theme/simple.pug
+++ b/src/views/theme/simple.pug
@@ -5,4 +5,13 @@ block style
     link(rel="stylesheet" href="/styles/theme/simple.css")
 
 block body
-    
+    #app
+        .container
+            .row
+                .secondary.col-lg-3
+                    header.site-header(role="header")
+                        .hgroup
+                            h1.site-title
+                                a(href="/") #{user.siteTitle} 
+                            h2.sub-title #{user.subTitle}
+                .primary.col-lg-9
