--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,10 +2,11 @@ doctype html
 
 html
     head
-        title #{_T('home')}
+        title #{user.name}|#{_T('home')}
         
         link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
-        
+        link(href="/images/favicon.png" rel="SHORTCUT ICON")
+
         block style
         
     body
