--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -4,10 +4,14 @@ html
     head
         title #{_T('login')}
         link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
+        link(rel='stylesheet' href="/styles/admin/login.css")
+
         link(href="/images/favicon.png" rel="SHORTCUT ICON")
 
         
     body
+        #app
+            #panel
             
     script(src="/3rd/jquery/dist/jquery.min.js")
     script(src="/3rd/bootstrap/dist/js/bootstrap.min.js")
