--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,7 +3,7 @@ doctype html
 html
     head
         title #{user.name} | #{_T('home')}
-        
+        meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
         link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
         link(href="/images/favicon.png" rel="SHORTCUT ICON")
 
