--- a/src/assets/styles/theme/simple.scss
+++ b/src/assets/styles/theme/simple.scss
@@ -1,4 +1,5 @@
 @import "../common.scss";
+@import "./fonts.scss";
 
 body{
     background-image: url(/images/theme/simple/background.jpg);
@@ -40,9 +41,9 @@ body{
             text-transform: uppercase;
             margin: -15px 0 30px;
             line-height: 20px;
-            font-family: "Roboto Condensed";
             font-size: 12px;
             color: rgba(255,255,255,0.5);
+            font-weight: 300;
         }
         .navigation{
             padding: 0;
@@ -68,9 +69,51 @@ body{
                 }
             }
         }
+
+        .sidebar{
+            .widget{
+                padding: 25px;
+                border-bottom: 1px solid rgba(255,255,255,0.1);
+                font-size: 14px;
+                color: rgba(255,255,255,0.3);
+
+                &:last-child{
+                    border: none;
+                }
+
+                .widget-title{
+                    text-transform: uppercase;
+                    color: rgba(255,255,255,0.3);
+                    font-size: 12px;
+                    line-height: 20px;
+                    margin: 0 0 10px;
+                    font-weight: 300;
+                    font-family: "Roboto Condensed";
+
+                }
+                ul{
+                    margin: 0 0 0 15px;
+                    padding: 0;
+                    li{
+                        font-size: 14px;
+                        list-style:disc;
+                        line-height: 22px;
+                        font-weight: 300;
+                        font-family: "Roboto";
+                        a{
+                            color: #fff;
+                            &:hover{
+                                color: #2E8BC3 !important;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
     }
     .primary{
         background-color:white;
-        min-height:800px; 
+        min-height:800px;
     }
 }
