--- a/src/views/theme/simple.pug
+++ b/src/views/theme/simple.pug
@@ -17,8 +17,36 @@ block body
                         nav.navigation
                             .nav-menu
                                 ul
-                                    -for(let page of user.pages){
+                                    -for(let page of user.pages || []){
                                         li 
                                             a(href=page.href) #{page.title}
                                     -}
+                    .sidebar
+                        .categories.widget
+                            h3.widget-title #{_T("categories")}
+                            ul
+                                -for(let link of user.categories || []){
+                                    li
+                                        a(href=link.href) #{link.title}
+                                -}
+                                    
+                        .recent-posts.widget
+                            
+                            h3.widget-title #{_T("recent posts")}
+                            ul
+                                -for(let link of user.recentPosts || []){
+                                    li
+                                        a(href=link.href) #{link.title}
+                                -}
+                            
+                        .recent-comments.widget
+                            h3.widget-title #{_T("recent comments")}
+                            ul
+                                -for(let link of user.recentComments || []){
+                                    li
+                                        span #{link.sUser}《
+                                        a.article(href=link.href) #{link.title}
+                                        span 》
+                                -}
+                        
                 .primary.col-lg-9
