--- a/src/views/theme/simple.pug
+++ b/src/views/theme/simple.pug
@@ -69,7 +69,8 @@ block body
                                             i(class="fa fa-comment-o" aria-hidden="true")
                                             .num #{item.comments}#{_T("comments")}
 
-                                            
+                                section.content!=item.content
+                                    
                         -}
                     
                     
