--- a/src/assets/styles/admin/login.scss
+++ b/src/assets/styles/admin/login.scss
@@ -43,6 +43,11 @@ body{
                     flex-direction: row;
                     justify-content: space-between;
                 }
+                .err-msg{
+                    display: flex;
+                    justify-content: center;
+                    color:red;
+                }
             }
         }
     }
