--- a/src/admin/template/login.pug
+++ b/src/admin/template/login.pug
@@ -2,19 +2,23 @@
     .head
         img(src="/images/FIZZ.png")
     .body
-        .form-group
+        form(@submit.prevent="onClick")
+            
             .form-group
                 label(for="username") 用户名：
-                input(type="text" class="form-control" id="username")
+                input(type="text" class="form-control" v-model="username" required)
             .form-group
                 label(for="password") 密码：
-                input(type="password" class="form-control" id="password")
+                input(type="password" class="form-control" v-model="password" required)
             
             .bottom
                 .checkbox
                     label
-                        input(type="checkbox") 
+                        input(type="checkbox" v-model="checked") 
                         span 记住我的登录信息
                 .right
-                    input(type="button" class="btn btn-primary" value="登录")
-    
+                    input(type="submit" class="btn btn-primary" value="登录")
+
+            .err-msg(v-if = "errMsg && errMsg.length>0")
+                .error 
+                .text {{errMsg}}
