--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,18 +1,10 @@
-doctype html
+extends ./layout.pug
 
-html
-    head
-        title #{_T('login')}
-        link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
-        link(rel='stylesheet' href="/styles/admin/login.css")
+block title
+    title #{_T('login')}
 
-        link(href="/images/favicon.png" rel="SHORTCUT ICON")
+block style
+    link(rel='stylesheet' href="/styles/admin/login.css")
 
-        
-    body
-        #app
-            #panel
-            
-    script(src="/3rd/jquery/dist/jquery.min.js")
-    script(src="/3rd/bootstrap/dist/js/bootstrap.min.js")
+block script
     script(src="/js/login.js")
