--- a/src/assets/scripts/admin/template/index.pug
+++ b/src/assets/scripts/admin/template/index.pug
@@ -1,2 +1,7 @@
 .panel
-    router-view
+    .navs
+        router-link(to="home" class="home nav" active-class="active") 总览
+        router-link(to="edit" class="edit nav" active-class="active") 写文章
+        router-link(to="setting" class="setting nav" active-class="active") 设置
+    .contents
+        router-view
