--- a/src/assets/styles/admin/index.scss
+++ b/src/assets/styles/admin/index.scss
@@ -1,10 +1,73 @@
 @import '../common.scss';
 
 body{
-    background: url(/images/admin/bg-shuiping.png);
-    #app{
-        .panel{
+    background: url(/images/admin/bg2.png);
+    background-size: cover;
 
+    a{
+        outline: none;
+        text-decoration: none !important;
+
+    }
+    #app{
+        height: 100%;
+        width: 100%;
+
+        .panel{
+            background-color: transparent;
+            padding-top: 5%;
+            margin: auto;
+            width: 1000px;
+            .navs{
+                padding-left: 12px;
+                .nav{
+                    background-color: #5d5048;
+                    border-top-left-radius: 6px;
+                    border-top-right-radius: 6px;
+                    height: 60px;
+                    width: 100px;
+                    display: block;
+                    color: white;
+                    text-align: center;
+                    line-height: 60px;
+                    font-size: 16px;
+                    margin-right: 4px;
+                    float: left;
+                    &.active{
+                        background: white;
+                        color: #5d5048;
+                    }
+                }
+                &:after{
+                    clear: both;
+                    content:" ";
+                    display: block;
+                }
+            }
+
+            .contents{
+                background: #f0f0f0;
+                height: 500px;
+                border-radius: 6px;
+                .welcome{
+                    width: 100%;
+
+                    height: 100%;
+                    display: flex;
+                    text-align: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    color: #5d5048;
+                    .time{
+                        font-size: 22px;
+
+                    }
+                    .text{
+                        font-size: 18px;
+                    }
+                }
+
+            }
         }
     }
 }
