--- a/src/assets/styles/theme/simple.scss
+++ b/src/assets/styles/theme/simple.scss
@@ -1,163 +1,1 @@
-@import "../common.scss";
-@import "./fonts.scss";
-
-body{
-    background-image: url(/images/theme/simple/background.jpg);
-    background-position: left top;
-    background-size: auto;
-    background-repeat: repeat;
-    background-attachment: scroll;
-
-    a{
-        text-decoration: none!important;
-    }
-
-    li{
-        list-style: none;
-    }
-
-}
-
-#app{
-    .row{
-        display:flex;
-    }
-    .secondary{
-        background-color: #0073A1;
-        .site-title{
-            font-family: "Amatic SC";
-            line-height: 50px;
-            margin: 0;
-            padding: 30px 0;
-            text-align: center;
-            a{
-                color: white;
-                font-family: "Amatic SC";
-
-            }
-        }
-        .sub-title{
-            text-align: center;
-            text-transform: uppercase;
-            margin: -15px 0 30px;
-            line-height: 20px;
-            font-size: 12px;
-            color: rgba(255,255,255,0.5);
-            font-weight: 300;
-        }
-        .navigation{
-            padding: 0;
-            .nav-menu{
-                ul{
-                    margin: 0;
-                    padding: 0;
-                    li{
-                        border-bottom: 1px solid rgba(255,255,255,0.1);
-                        a{
-                            line-height: 40px;
-                            padding: 10px 25px;
-                            color: #fff;
-                            font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-                            font-size: 12px;
-                            text-transform: uppercase;
-                        }
-
-                        &:first-child{
-                            border-top: 1px solid rgba(255,255,255,0.1);
-                        }
-                    }
-                }
-            }
-        }
-
-        .sidebar{
-            .widget{
-                padding: 25px;
-                border-bottom: 1px solid rgba(255,255,255,0.1);
-                font-size: 14px;
-                color: rgba(255,255,255,0.3);
-
-                &:last-child{
-                    border: none;
-                }
-
-                .widget-title{
-                    text-transform: uppercase;
-                    color: rgba(255,255,255,0.3);
-                    font-size: 12px;
-                    line-height: 20px;
-                    margin: 0 0 10px;
-                    font-weight: 300;
-                    font-family: "Roboto Condensed";
-
-                }
-                ul{
-                    margin: 0 0 0 15px;
-                    padding: 0;
-                    li{
-                        font-size: 14px;
-                        list-style:disc;
-                        line-height: 22px;
-                        font-weight: 300;
-                        font-family: "Roboto";
-                        a{
-                            color: #fff;
-                            &:hover{
-                                color: #2E8BC3 !important;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-    }
-    .primary{
-        background-color:white;
-        min-height:800px;
-        h2,h3,h4,h5{
-            font-family: Roboto Slab;
-        }
-        .article{
-            padding: 60px 35px !important;
-            border-bottom: 1px solid #EEE;
-            header{
-                border-bottom: 1px solid #F3F3F3;
-            }
-            h2{
-                font-size: 44px;
-                font-family: "Roboto Slab";
-                font-weight: 300;
-            }
-            .info{
-                text-align: right;
-                color: #3BC4FA !important;
-                font-size: 16px !important;
-                font-family: Roboto Condensed;
-                display: flex;
-                flex-direction: row;
-                justify-content: flex-end;
-                align-items: center;
-                height: 20px;
-                margin-bottom: 5px;
-                .date{
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                }
-                .comments{
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    margin-left: 10px;
-                }
-                i{
-                    margin-right: 4px;
-                    margin-left: 4px;
-                }
-            }
-        }
-    }
-}
+@import "./simple/index.scss";
