--- a/src/assets/styles/admin/index.scss
+++ b/src/assets/styles/admin/index.scss
@@ -1,5 +1,5 @@
 @import '../common.scss';
-
+@import "./edit.scss";
 body{
     background: url(/images/admin/bg2.png);
     background-size: cover;
