--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,6 +4,7 @@ html
     head
         block title
         link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
+        link(rel='stylesheet' href="/3rd/font-awesome/css/font-awesome.min.css")
         block style
 
         link(href="/images/favicon.png" rel="SHORTCUT ICON")
