--- a/src/assets/scripts/admin/template/edit.pug
+++ b/src/assets/scripts/admin/template/edit.pug
@@ -1,15 +1,19 @@
 .edit-view
-    .head
-        h4.title.center(contenteditable="true") 未命名标题
-        .right-tools
-            .save
-                .icon.fa.fa-floppy-o(aria-hidden="true")
-            .full-screen
-                .icon.fa.fa-expand(aria-hidden="true")
-            .send 
-                .icon.fa.fa-share(aria-hidden="true")
-                div 发布文章
+    template(v-if="finished==false")
+        .head
+            h4.title.center(contenteditable="true") 未命名标题
+            .right-tools
+                .save
+                    .icon.fa.fa-floppy-o(aria-hidden="true")
+                .full-screen
+                    .icon.fa.fa-expand(aria-hidden="true")
+                .send(@click="send")
+                    .icon.fa.fa-share(aria-hidden="true")
+                    div 发布文章
+                
             
-        
-    .editor(contenteditable="true")
+        textarea.editor(v-model="article")
+    template(v-if="finished==true")
+        .finished 
+            h4 文章发布成功，已发布文章可在文章列表查看！
         
