--- a/src/assets/styles/admin/edit.scss
+++ b/src/assets/styles/admin/edit.scss
@@ -37,6 +37,19 @@
                 .icon{
                     font-size: 16px;
                 }
+                .preview{
+                    cursor: pointer;
+                    width: 40px;
+                    height: 40px;
+                    align-items: center;
+                    justify-content: center;
+                    display: flex;
+                    &:hover{
+                        background: #555;
+                        color: white;
+                    }
+                }
+
                 .save{
                     cursor: pointer;
                     width: 40px;
