--- a/src/assets/scripts/admin/template/edit.pug
+++ b/src/assets/scripts/admin/template/edit.pug
@@ -19,3 +19,5 @@
         .finished 
             h4 文章发布成功，已发布文章可在文章列表查看！
         
+    .hide
+        a(ref="openBtn" v-bind:href="previewUrl" target="_blank")
