--- a/src/assets/scripts/admin/template/edit.pug
+++ b/src/assets/scripts/admin/template/edit.pug
@@ -20,4 +20,4 @@
             h4 文章发布成功，已发布文章可在文章列表查看！
         
     .hide
-        a(ref="openBtn" v-bind:href="previewUrl" target="_blank")
+        a(ref="openBtn" href="javascript:;" @click="openPreview")
