--- a/src/assets/scripts/admin/template/install.pug
+++ b/src/assets/scripts/admin/template/install.pug
@@ -24,11 +24,11 @@
                 .form-group
                     label.control-label.col-sm-3(for="dbname") 数据库用户名:
                     .col-sm-9
-                        input(type="text" class="form-control" v-model="dbname" required )
+                        input(type="text" class="form-control" v-model="dbname" placeholder="可为空" )
                 .form-group
                     label.control-label.col-sm-3(for="dbpass") 数据库密码:
                     .col-sm-9
-                        input(type="text" class="form-control" v-model="dbpass" required )
+                        input(type="text" class="form-control" v-model="dbpass" placeholder="可为空" )
                 .form-group
                     label.control-label.col-sm-3(for="dbaddr") 数据库连接地址:
                     .col-sm-9
