--- a/src/assets/styles/admin/install.scss
+++ b/src/assets/styles/admin/install.scss
@@ -10,7 +10,11 @@ body{
         align-items: center;
         .panel{
             width: 600px;
-            background-color: white;
+            .install{
+                background-color: white;
+                width: 100%;
+                height: 100%;
+            }
             .title{
                 display: flex;
                 justify-content: center;
@@ -27,6 +31,13 @@ body{
                     display: flex;
                     justify-content: flex-end;
                 }
+            }
+            .installed{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
     }
