--- a/src/views/install.pug
+++ b/src/views/install.pug
@@ -7,4 +7,6 @@ block style
     link(rel='stylesheet' href="/styles/admin/install.css")
 
 block script
+    script.
+        var installed = #{installed};
     script(src="/js/install.js")
