--- a/src/assets/styles/admin/edit.scss
+++ b/src/assets/styles/admin/edit.scss
@@ -29,6 +29,9 @@
                 word-wrap: break-word;
                 overflow: hidden;
                 white-space:nowrap;
+                background: transparent;
+                border: none;
+                font-size: 18px;
             }
             .right-tools{
                 height: 100%;
