--- a/src/assets/styles/theme/simple/index.scss
+++ b/src/assets/styles/theme/simple/index.scss
@@ -13,14 +13,25 @@
     .primary{
         background-color:white;
         min-height:800px;
-        h2,h3,h4,h5{
+        h1,h2,h3,h4,h5{
             font-family: Roboto Slab;
+            font-weight: 300;
+            line-height: 1.2;
+            margin-top: 26px;
+            margin-bottom: 13px;
+        }
+        p{
+            margin: 0px 10px 10px !important;
         }
         .article{
             padding: 60px 35px !important;
             border-bottom: 1px solid #EEE;
             header{
                 border-bottom: 1px solid #F3F3F3;
+                padding-bottom: 10px;
+                h2{
+                    color: #323a45;
+                }
             }
             h2{
                 font-size: 44px;
@@ -55,6 +66,10 @@
                     margin-right: 4px;
                     margin-left: 4px;
                 }
+            }
+
+            .content{
+                padding-top: 30px;
             }
         }
     }
