--- a/src/views/theme/simple/index.pug
+++ b/src/views/theme/simple/index.pug
@@ -24,7 +24,7 @@ block body
                                             - {
                                             -    let date = new Date(item.date)
                                             -    let year = date.getFullYear()
-                                            -    let month = date.getMonth()
+                                            -    let month = date.getMonth() + 1
                                             -    let day = date.getDate()
                                                 time #{`${year + _T("year") + month + _T("month") + day + _T("day")}`}
                                             - }
