--- a/src/assets/styles/admin/edit.scss
+++ b/src/assets/styles/admin/edit.scss
@@ -117,5 +117,76 @@
             justify-content: center;
             align-items: center;
         }
+
+        .side-bar{
+            position: fixed;
+            right: 0;
+            top:0;
+            bottom:0;
+            margin: auto;
+            background: white;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 300ms ease;
+            .drag-btn{
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            &.hide-bar{
+                border-radius: 50%;
+                .show-content{
+                    display: none;
+                }
+            }
+
+            &.show-bar{
+                .drag-btn{
+                    display: none;
+                }
+                height: 400px;
+                width: 150px;
+                border-radius: 6px;
+                background: transparent;
+                .show-content{
+                    display: flex;
+                    height: 100%;
+                    width: 100%;
+                    align-items: center;
+                    justify-content: center;
+                    .drop-btn{
+                        height: 60px;
+                        width: 20px;
+                        border-top-left-radius: 30px;
+                        border-bottom-left-radius: 30px;
+                        background: #5d5048;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        color: white;
+                        text-align: center;
+                        cursor: pointer;
+
+                    }
+                    .content{
+                        width: 130px;
+                        height: 100%;
+                        background: #dedede;
+                        display: flex;
+                        overflow: auto;
+                    }
+                }
+
+
+            }
+
+
+        }
     }
 }
