--- a/src/views/theme/detail.pug
+++ b/src/views/theme/detail.pug
@@ -2,7 +2,7 @@ doctype html
 
 html
     head
-        title #{article.name}
+        title #{article.title}
         meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
         link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
         link(rel='stylesheet' href="/3rd/font-awesome/css/font-awesome.min.css")
