--- a/src/views/theme/simple/detail.pug
+++ b/src/views/theme/simple/detail.pug
@@ -13,6 +13,10 @@ block body
                         
                 .primary.col-lg-9
                     .main
-                    
+                        article.article
+                            header
+                                a(href=`/details/${article.id}`)
+                                    h2 #{article.title}
+                            section!=article.body
                     .comments
                     
