--- a/src/assets/styles/admin/edit.scss
+++ b/src/assets/styles/admin/edit.scss
@@ -188,5 +188,17 @@
 
 
         }
+
+
+        &.is-full{
+            position: fixed;
+            left: 0;
+            right: 0;
+            top:0;
+            bottom:0;
+            background: white;
+        }
+
+        
     }
 }
