--- a/src/views/theme/home.pug
+++ b/src/views/theme/home.pug
@@ -12,7 +12,9 @@ html
         
     body
         block body
+        
+        div(style="display:none")!=statistics
             
     script(src="/3rd/jquery/dist/jquery.min.js")
     script(src="/3rd/bootstrap/dist/js/bootstrap.min.js")
-        
+    
