--- a/src/assets/styles/admin/index.scss
+++ b/src/assets/styles/admin/index.scss
@@ -1,6 +1,7 @@
 @import '../common.scss';
 @import "./edit.scss";
 @import "./setting.scss";
+@import './list.scss';
 
 body{
     background: url(/images/admin/bg2.png);
