--- a/src/assets/scripts/admin/template/edit.pug
+++ b/src/assets/scripts/admin/template/edit.pug
@@ -5,7 +5,7 @@
             .right-tools
                 .preview(@click="preview" title="预览")
                     .icon.fa.fa-film(aria-hidden="true" )
-                .save(title="保存")
+                .save(title="保存" @click="save")
                     .icon.fa.fa-floppy-o(aria-hidden="true" )
                 .full-screen(title="全屏" @click="fullScreen")
                     .icon.fa.fa-expand(aria-hidden="true")
