--- a/src/assets/styles/theme/simple-detail.scss
+++ b/src/assets/styles/theme/simple-detail.scss
@@ -29,6 +29,9 @@
             .content{
                 padding-top: 30px;
             }
+            img{
+                max-width: 100%;
+            }
         }
     }
 
