--- a/src/views/theme/detail.pug
+++ b/src/views/theme/detail.pug
@@ -7,6 +7,11 @@ html
         link(rel='stylesheet' href="/3rd/bootstrap/dist/css/bootstrap.min.css")
         link(rel='stylesheet' href="/3rd/font-awesome/css/font-awesome.min.css")
         link(href="/images/favicon.png" rel="SHORTCUT ICON")
+        link(href="http://cdn.bootcss.com/highlight.js/9.12.0/styles/arduino-light.min.css" rel='stylesheet')
+        script(src="http://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js")
+        
+        script.
+            hljs.initHighlightingOnLoad();
 
         block style
         
