--- a/src/assets/styles/theme/jianshu/index.scss
+++ b/src/assets/styles/theme/jianshu/index.scss
@@ -102,6 +102,7 @@ body{
             margin-top: 15px;
             width: 66.666%;
             display: flex;
+            flex-direction: column;
             .item{
                 border-top: 1px solid #f0f0f0;
                 display: flex;
@@ -109,6 +110,7 @@ body{
                 align-items: center;
                 color: #2f2f2f;
                 font-size: 14px;
+                margin-bottom: 20px;
                 .left{
                     flex-grow: 1;
                     .info{
