--- a/src/assets/scripts/admin/jianshu/template/home.hbs
+++ b/src/assets/scripts/admin/jianshu/template/home.hbs
@@ -2,7 +2,7 @@
 
 <div class="content">
     {{> partials/navs}}
-    <section>
+    <section class="content-right">
         {{description}}
     </section>
 </div>
