--- a/src/assets/scripts/admin/jianshu/template/partials/navs.hbs
+++ b/src/assets/scripts/admin/jianshu/template/partials/navs.hbs
@@ -1,13 +1,30 @@
-<nav>
-    <ul>
-        <li>
-            <a href="/">总览</a>
-        </li>
-        <li>
-            <a href="/list">列表</a>
-        </li>
-        <li>
-            <a href="/setting">设置</a>
-        </li>
-    </ul>
-</nav>
+<div class="content-left">
+    <header>
+        <a href="/" class="icon"></a>
+        <div class="title">
+            FITZ BLOG
+        </div>
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="#"><i class="fa fa-home" aria-hidden="true"></i>总览</a>
+            </li>
+            <li>
+                <a href="#new"><i class="fa fa-pencil" aria-hidden="true"></i>写文章</a>
+            </li>
+            <li>
+                <a href="#list"><i class="fa fa-list-ol" aria-hidden="true"></i>列表</a>
+            </li>
+
+        </ul>
+
+        <div class="settings">
+            <div class="title">SETTINGS</div>
+            <div class="item">
+                <a href="#setting"><i class="fa fa-cog" aria-hidden="true"></i>常规设置</a>
+            </div>
+        </div>
+    </nav>
+
+</div>
