--- a/src/views/admin/jianshu/home.pug
+++ b/src/views/admin/jianshu/home.pug
@@ -5,8 +5,11 @@ block title
 
 block style
     link(rel='stylesheet' href="/styles/admin/jianshu.css")
+    link(href="http://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.css" rel="stylesheet")
 
 block script
+    script(src="http://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.js")
+    
     script(src="/js/admin-jianshu.js")
 
 block app
