--- a/src/assets/scripts/admin/jianshu/template/edit.hbs
+++ b/src/assets/scripts/admin/jianshu/template/edit.hbs
@@ -4,7 +4,9 @@
     {{> partials/navs}}
     <section class="content-right">
         <div class="info">
-            <div class="title">{{title}}</div>
+            <div class="title">
+                文章标题：<input type="text" value="{{title}}" class="input form-control"/>
+            </div>
         </div>
         <div class="bottom-content">
             <div class="editor-area">
