--- a/src/assets/styles/admin/jianshu.scss
+++ b/src/assets/styles/admin/jianshu.scss
@@ -13,10 +13,10 @@ html{
             list-style-type: none;
             margin: 0;
         }
-        a:link { text-decoration: none;color: blue}
+        a:link { text-decoration: none;}
     　　 a:active { text-decoration:blink}
-    　　 a:hover { text-decoration:underline;color: red}
-    　　 a:visited { text-decoration: none;color: green}
+    　　 a:hover { text-decoration:underline;}
+    　　 a:visited { text-decoration: none;}
     }
 }
 #app{
@@ -77,7 +77,7 @@ html{
             .settings{
                 margin-top: 32px;
                 .title{
-            
+
                     font-size: 13px;
                     color: #7d7f7f;
                     margin-left: 20px;
