--- a/src/assets/styles/admin/jianshu/edit.scss
+++ b/src/assets/styles/admin/jianshu/edit.scss
@@ -6,11 +6,25 @@
     .info{
         height: 60px;
         flex-shrink: 0;
+        align-items: center;
+        display: flex;
+        padding-left: 20px;
+        .title{
+            display: flex;
+            flex-grow: 1;
+            flex-direction: row;
+            align-items: center;
+            input{
+                width: 60%;
+            }
+        }
     }
     .bottom-content{
         flex-grow: 1;
         display: flex;
         flex-direction: row;
+        padding: 4px;
+
 
         .editor-area{
             flex-grow: 1;
