--- a/src/assets/scripts/admin/jianshu/template/list.hbs
+++ b/src/assets/scripts/admin/jianshu/template/list.hbs
@@ -5,7 +5,7 @@
     <section class="content-right">
         <div class="wrapper">
             <div class="container-fluid">
-                <a href="#" class="btn btn-warning delete">删除</a>
+                <a href="javascript:;" class="btn btn-warning delete">删除</a>
                 <table class="table table-hover">
                     <thead>
                         <tr class="">
@@ -20,12 +20,12 @@
                     <tbody>
                         {{#each list}}
                         <tr>
-                            <td><input type="checkbox" name="" value="{{this.id}}"></td>
+                            <td><input type="checkbox" name="ids" value="{{this.id}}"></td>
                             <td>{{this.title}}</td>
                             <td>{{this.category.title}}</td>
                             <td>{{this.visits}}</td>
                             <td>{{this.date}}</td>
-                            <td><a href="javacript:;" class="edit" data-id="{{this.id}}">编辑</a></td>
+                            <td><a href="#edit/{{this.id}}" class="edit" data-id="{{this.id}}">编辑</a></td>
                         </tr>
                         {{/each}}
                     </tbody>
